# rust_warp

./: .env  Cargo.toml  data.json  dev.http  note.txt  rustfmt.toml
src/: main.rs
src/api/: mod.rs  users.rs
src/middleware/: db_connection.rs  mod.rs  security.rs
src/models/: models.rs
template/: index.html
testing/: main copy.txt  succes.txt
