[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
warp = "0.3.7"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.30"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version="0.7.4", features = ["postgres", "runtime-tokio-rustls","chrono"] }
tokio = { version = "1.37.0", features = ["full"] }